# velocity

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fact.xp  fib.elp  fib.spa  fib.spb  fib.xp  hello.spa  hello.xp  main.cpp
assembler/: SpadeAssembly.g4  SpadeAssembly.interp  SpadeAssembly.tokens  SpadeAssemblyBaseListener.cpp  SpadeAssemblyBaseListener.h  SpadeAssemblyBaseVisitor.cpp  SpadeAssemblyBaseVisitor.h  SpadeAssemblyLexer.cpp  SpadeAssemblyLexer.h  SpadeAssemblyLexer.interp  SpadeAssemblyListener.cpp  SpadeAssemblyListener.h  SpadeAssemblyParser.cpp  SpadeAssemblyParser.h  SpadeAssemblyVisitor.cpp  SpadeAssemblyVisitor.h  assembler_main.cpp  hello.spb
callable/: callable.cpp  callable.hpp  foreign.cpp  foreign.hpp  frame.cpp  frame.hpp  frame_template.cpp  frame_template.hpp  inbuilt.cpp  inbuilt.hpp  method.cpp  method.hpp  table.cpp  table.hpp
cmake/: ExternalAntlr4Cpp.cmake
debug/: debug.cpp  debug.hpp  table.cpp  table.hpp
ee/: memory.cpp  memory.hpp  opcode.cpp  opcode.hpp  run.cpp  settings.hpp  state.cpp  state.hpp  thread.cpp  thread.hpp  vm.cpp  vm.hpp
frame/: frame.cpp  frame.hpp  frame_template.cpp  frame_template.hpp  table.cpp  table.hpp  writer.hpp
loader/: elfdef.hpp  elpdef.hpp  foreign_loader.cpp  foreign_loader.hpp  loader.cpp  loader.hpp  native_loader.cpp  native_loader.hpp  parser.cpp  parser.hpp  verifier.cpp  verifier.hpp  writer.cpp  writer.hpp
memory/: collector.cpp  collector.hpp  manager.cpp  memory.cpp  memory.hpp  space.cpp  space.hpp
memory/basic/: basic_collector.hpp  collector.cpp  collector.hpp  manager.cpp  manager.hpp
objects/: callable.cpp  callable.hpp  float.cpp  float.hpp  foreign.cpp  foreign.hpp  inbuilt_types.cpp  inbuilt_types.hpp  int.cpp  int.hpp  method.cpp  method.hpp  module.cpp  module.hpp  obj.cpp  obj.hpp  object.cpp  object.hpp  type.cpp  type.hpp  typeparam.cpp  typeparam.hpp
oop/: method.cpp  method.hpp  obj.cpp  obj.hpp  objects.cpp  objects.hpp  oop.cpp  oop.hpp  type.cpp  type.hpp
src/: main.cpp
src/callable/: callable.cpp  callable.hpp  foreign.cpp  foreign.hpp  foreign_call.cpp  foreign_switch.txt  frame.cpp  frame.hpp  frame_template.cpp  frame_template.hpp  inbuilt.cpp  inbuilt.hpp  method.cpp  method.hpp  table.cpp  table.hpp
src/debug/: debug.cpp  debug.hpp  table.cpp  table.hpp
src/ee/: run.cpp  settings.hpp  thread.cpp  thread.hpp  vm.cpp  vm.hpp
src/loader/: foreign_loader.cpp  foreign_loader.hpp  loader.cpp  loader.hpp  verifier.cpp  verifier.hpp
src/memory/: manager.cpp  manager.hpp  memory.hpp
src/memory/basic/: basic_collector.cpp  basic_collector.hpp  basic_manager.cpp  basic_manager.hpp
src/objects/: float.cpp  float.hpp  inbuilt_types.cpp  inbuilt_types.hpp  int.cpp  int.hpp  module.cpp  module.hpp  obj.cpp  obj.hpp  type.cpp  type.hpp  typeparam.cpp  typeparam.hpp
src/utils/: common.hpp  exceptions.hpp  format.hpp  utils.cpp  utils.hpp
test_code/: fib.elp  hello.elp
utils/: common.hpp  constants.hpp  exceptions.hpp  sign.cpp  sign.hpp  utils.cpp  utils.hpp
